--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ body {
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 30px 15px;
+  padding: 0 15px;
 }
 
 .section-title {
@@ -64,6 +64,10 @@ body {
 
 /* start header */
 
+.header {
+  padding: 36px 0;
+}
+
 .header-container {
   align-items: center;
 }
@@ -79,3 +83,68 @@ body {
 .header-list-item:not(:last-child) {
   margin-right: 52px;
 }
+
+/* end header */
+
+/* start hero */
+
+.hero {
+  padding: 100px 0;
+}
+
+.hero-content {
+  flex-direction: column;
+  align-items: flex-start;
+  max-width: 50%;
+}
+
+.hero-title {
+  margin: 0 0 25px;
+}
+
+.hero-descr {
+  margin: 0 0 34px;
+}
+
+.hero-btn {
+  margin: 0 0 14px;
+}
+
+/* end hero */
+
+/* start services */
+
+.services-title {
+  text-align: center;
+}
+
+.services-descr {
+  text-align: center;
+}
+
+.services-item {
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+  width: 270px;
+  outline: 1px solid #ccc;
+}
+
+.services-item:not(:nth-child(4n)) {
+  margin-right: 30px;
+}
+
+.services-item-icon {
+  margin: 0 0 25px;
+}
+
+.services-item-title {
+  margin: 0 0 15px;
+}
+
+.services-item-descr {
+  margin: 0;
+  text-align: center;
+}
+
+/* end services */
