--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,16 @@ body {
   cursor: pointer;
 }
 
+.btn {
+  padding: 15px 35px;
+  border-radius: 3px;
+  font-weight: 600;
+  font-size: 15px;
+  color: #fff;  
+  background: #3172b9;
+  text-transform: uppercase;
+}
+
 .flex {
   display: flex;
 }
@@ -113,6 +123,8 @@ body {
 
 .header-link {
   font-weight: 600;
+  color: #1c1c1c;
+  font-size: 15px;
 }
 
 /* end header */
