--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,8 @@ body {
 /* start hero */
 
 .hero {
-  padding: 100px 0;
+  padding: 100px 0 150px;
+  background: url('../img/hero/bg-fon.jpg') center center / cover no-repeat;
 }
 
 .hero-content {
@@ -143,14 +144,39 @@ body {
 
 .hero-title {
   margin: 0 0 25px;
+  font-weight: 300;
+  font-size: 40px;
+  line-height: 130%;
+  color: #1c1c1c;
 }
 
 .hero-descr {
   margin: 0 0 34px;
+  max-width: 490px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 155%;
+  color: #787878;
+}
+
+.hero-wrapper {
+  flex-direction: column;
+  align-items: center;
 }
 
 .hero-btn {
   margin: 0 0 14px;
+  padding: 19px 58px;
+}
+
+.hero-secure {
+  padding-left: 27px;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 155%;
+  text-transform: uppercase;
+  color: #787878;
+  background: url('../img/hero/secure.svg') left center / contain no-repeat;
 }
 
 /* end hero */
