--- a/css/styles.css
+++ b/css/styles.css
@@ -68,11 +68,11 @@ body {
 .btn {
   padding: 15px 35px;
   border-radius: 3px;
-  font-weight: 600;
   font-size: 15px;
+  font-weight: 600;
   color: #fff;  
-  background: #3172b9;
   text-transform: uppercase;
+  background: #3172b9;
 }
 
 .flex {
@@ -87,10 +87,19 @@ body {
 
 .section-title {
   margin: 0 0 42px;
+  font-size: 36px;
+  font-weight: 300;
+  line-height: 130%;
+  color: #1c1c1c;
+  text-align: center;
 }
 
 .section-descr {
   margin: 0 0 54px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #787878;
+  text-align: center;
 }
 
 .section-offset {
@@ -122,9 +131,9 @@ body {
 }
 
 .header-link {
+  font-size: 15px;
   font-weight: 600;
   color: #1c1c1c;
-  font-size: 15px;
 }
 
 /* end header */
@@ -144,8 +153,8 @@ body {
 
 .hero-title {
   margin: 0 0 25px;
-  font-weight: 300;
   font-size: 40px;
+  font-weight: 300;
   line-height: 130%;
   color: #1c1c1c;
 }
@@ -153,8 +162,8 @@ body {
 .hero-descr {
   margin: 0 0 34px;
   max-width: 490px;
-  font-weight: 400;
   font-size: 16px;
+  font-weight: 400;
   line-height: 155%;
   color: #787878;
 }
@@ -171,11 +180,11 @@ body {
 
 .hero-secure {
   padding-left: 27px;
-  font-weight: 400;
   font-size: 11px;
+  font-weight: 400;
   line-height: 155%;
-  text-transform: uppercase;
   color: #787878;
+  text-transform: uppercase;
   background: url('../img/hero/secure.svg') left center / contain no-repeat;
 }
 
@@ -183,8 +192,12 @@ body {
 
 /* start services */
 
+.services {
+  border-bottom: 1px solid #dadada;
+}
+
 .services-title {
-  text-align: center;
+  margin-bottom: 21px;           
 }
 
 .services-descr {
@@ -194,9 +207,10 @@ body {
 .services-item {
   flex-direction: column;
   align-items: center;
-  padding: 30px;
+  padding: 61px 30px 62px;
   width: 270px;
-  outline: 1px solid #ccc;
+  border: 1px solid #e4e4e4;
+  border-radius: 5px;
 }
 
 .services-item:not(:nth-child(4n)) {
@@ -204,15 +218,24 @@ body {
 }
 
 .services-item-icon {
-  margin: 0 0 25px;
+  margin: 0 0 28px;
 }
 
 .services-item-title {
   margin: 0 0 15px;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 130%;
+  color: #1c1c1c;
+  text-align: center;
 }
 
 .services-item-descr {
   margin: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 150%;
+  color: #787878;
   text-align: center;
 }
 
