--- a/css/styles.css
+++ b/css/styles.css
@@ -304,11 +304,16 @@ body {
 
 /* start clients */
 
+.clients {
+  border-bottom: 1px solid #e4e4e4;
+}
+
 .clients-item {
   flex-direction: column;
   width: 370px;
   padding: 51px 53px 32px 36px;
-  outline: 1px solid #ccc;
+  border: 1px solid #e4e4e4;
+  border-radius: 5px;
 }
 
 .clients-item:not(:nth-child(3n)) {
@@ -317,11 +322,23 @@ body {
 
 .clients-item-descr {
   margin: 0 0 33px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 180%;
+  color: #787878;
 }
+
+/* .line {
+  margin-bottom: 28px;
+  max-width: 297px;
+  height: 1px;
+  background: #e4e4e4;
+} */
 
 .clients-user {
   align-items: center;
-  margin-top: auto;
+  padding-top: 28px;
+  border-top: 1px solid #e4e4e4;
 }
 
 .clients-avatar {
@@ -332,6 +349,17 @@ body {
 
 .clients-name {
   margin-bottom: 5px;
+  font-size: 17px;
+  font-weight: 600;
+  line-height: 180%;
+  color: #1c1c1c;
+}
+
+.clients-post {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 180%;
+  color: #787878;
 }
 
 /* end clients */
