correction styles contacts

--- a/css/styles.css
+++ b/css/styles.css
@@ -367,6 +367,10 @@ body {
 
 /* start contacts */
 
+.contacts {
+  border-bottom: 1px solid #e4e4e4;
+}
+
 .contacts-title {
   margin-bottom: 109px;
 }
@@ -386,15 +390,15 @@ body {
   background: left top / 29px 29px no-repeat;
 }
 
-.contacts-item-1 {
+.contacts-item-location {
   background-image: url('../img/contacts/location_on.svg');
 }
 
-.contacts-item-2 {
+.contacts-item-phone {
   background-image: url('../img/contacts/phone.svg');
 }
 
-.contacts-item-3 {
+.contacts-item-mail {
   background-image: url('../img/contacts/mail.svg');
 }
 
@@ -416,10 +420,6 @@ body {
   font-weight: 400;
   line-height: 180%;
   color: #787878;
-}
-
-.contacts-link:not(:last-child) {
-  margin-bottom: 5px;
 }
 
 /* end contacts */
